# copybin

./: Cargo.toml  Jenkinsfile  README.md
.github/workflows/: format.yaml  rust.yaml  rust.yml
src/: main.rs
src/lib/: cli.rs  cred.rs  flag.rs  mod.rs  proc.rs
