[package]
name = "copybin"
version = "0.1.1"
edition = "2021"

[dependencies]
colored       = { version = "2.0.0" }
clap_complete = { version = "3.0" }
clap          = { version = "3.0", features = ["derive"] }
dirs          = { version = "4.0" }
futures       = { version = "0.3" }
reqwest       = { version = "0.11", features = ["stream"] }
serde         = { version = "1.0", features = ["derive"] }
tokio-util    = { version = "0.6", features = ["codec"] }
tokio         = { version = "1.0", features = ["full"] }
toml          = { version = "0.5" }
